--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,6 +34,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>90</y>
+      <width>80</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -41,7 +54,7 @@
      <x>0</x>
      <y>0</y>
      <width>902</width>
-     <height>25</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
