--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -37,14 +37,14 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>90</y>
-      <width>80</width>
-      <height>18</height>
+      <x>690</x>
+      <y>100</y>
+      <width>181</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>End Voting</string>
     </property>
    </widget>
   </widget>
